--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 20:05:02 2018</p>
+         Last Run: Fri Nov 23 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>80</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>64</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,19 +50,19 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>45</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>30</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "6",
                  "6",
                  "6"
@@ -190,8 +190,8 @@
                "data":[
                  "80",
                  "74",
-                 "71",
-                 "72"
+                 "70",
+                 "73"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "45",
-                 "30",
-                 "24"
+                 "54",
+                 "33",
+                 "22",
+                 "19"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 20:05:02 2018</p>
+         Last Run: Fri Nov 23 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 20:05:02 2018</p>
+         Last Run: Fri Nov 23 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,17 +483,17 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-4</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>6</td>
                         <td>82</td>
                         <td>0</td>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-4",
+                 "-6",
                  "-6"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              }
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "82",
                  "82",
                  "84"
                ]
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
+                 "75",
                  "72",
                  "71"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 20:05:02 2018</p>
+         Last Run: Fri Nov 23 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>7</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -722,7 +722,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "82",
-                 "86"
+                 "83",
+                 "87"
                ]
              },
              {
