--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 21:05:02 2018</p>
+         Last Run: Fri Nov 23 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>54</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "33",
-                 "22",
-                 "19"
+                 "55",
+                 "34",
+                 "23",
+                 "20"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 21:05:02 2018</p>
+         Last Run: Fri Nov 23 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>1</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -283,19 +283,19 @@
                         <td>58</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>21</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>56</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>SW</td>
+                        <td>8</td>
+                        <td>SSW</td>
                         <td>16</td>
                      </tr>
                   </tbody>
@@ -325,7 +325,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0"
+                 "-2"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "0",
                  "1",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -407,7 +407,7 @@
                "data":[
                  "60",
                  "58",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -416,7 +416,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
+                 "22",
                  "21",
                  "16"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 21:05:02 2018</p>
+         Last Run: Fri Nov 23 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -495,7 +495,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "82",
+                 "81",
+                 "81",
                  "84"
                ]
              },
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 21:05:02 2018</p>
+         Last Run: Fri Nov 23 22:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "81",
                  "83",
                  "87"
                ]
