--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 23:05:02 2018</p>
+         Last Run: Sat Nov 24 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>83</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>55</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>6</td>
-                        <td>74</td>
+                        <td>77</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>34</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>70</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>24</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>6</td>
-                        <td>72</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>20</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-6",
+                 "-6",
                  "-4",
-                 "-4",
-                 "-4"
+                 "-6"
                ]
              },
              {
@@ -115,10 +115,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-3",
                  "-2",
                  "-1",
-                 "-1",
-                 "-1"
+                 "-2"
                ]
              }
            ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "74",
-                 "70",
-                 "72"
+                 "83",
+                 "77",
+                 "73",
+                 "75"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "34",
-                 "24",
-                 "20"
+                 "63",
+                 "43",
+                 "32",
+                 "30"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 23:05:02 2018</p>
+         Last Run: Sat Nov 24 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -267,24 +267,24 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>60</td>
+                        <td>1</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
                         <td>-1</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>57</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>21</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -294,9 +294,9 @@
                         <td>2</td>
                         <td>58</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -394,8 +394,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              },
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "59",
                  "57",
                  "58"
                ]
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "21",
-                 "16"
+                 "16",
+                 "16",
+                 "13"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 23:05:02 2018</p>
+         Last Run: Sat Nov 24 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>6</td>
-                        <td>81</td>
+                        <td>5</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -495,7 +495,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "6",
                  "6"
                ]
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "82",
                  "81",
-                 "80",
                  "84"
                ]
              },
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 23:05:02 2018</p>
+         Last Run: Sat Nov 24 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,23 +698,23 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-4</td>
-                        <td>7</td>
+                        <td>-5</td>
+                        <td>6</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-4",
+                 "-5",
                  "-6"
                ]
              },
@@ -825,7 +825,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "7",
+                 "6",
                  "7"
                ]
              },
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "83",
                  "83",
                  "87"
                ]
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "43",
-                 "43"
+                 "44",
+                 "44",
+                 "44"
                ]
              }
            ]
